--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,7 @@ footer {
 
 .carousel-item img {
     width: auto;
+    max-height: 80vh;
     object-fit: cover;
     border-radius: 10px;
 }
@@ -179,6 +180,19 @@ a {
 
 /* TABLA */
 
+
+/* .table-dark {
+  --bs-table-bg: #fff;
+  --bs-table-striped-bg: #6fc3d8;
+  --bs-table-striped-color: #fff;
+  --bs-table-active-bg: #373b3e;
+  --bs-table-active-color: rgb(0, 0, 0);
+  --bs-table-hover-bg: #323539;
+  --bs-table-hover-color: #fff;
+  color: rgb(0, 0, 0);
+  border-color: #373b3e;
+} */
+
 .tabla-posiciones {
     display: inline-block;
     width: auto;
@@ -189,7 +203,7 @@ a {
     justify-content: center;
 }
 
-.tabla-goleadores, .tabla-vallas, .tabla-fairplay, .tabla-sancionados {
+.tabla-goleadores, .tabla-vallas, .tabla-fairplay, .tabla-sancionados, .tabla-fixture {
     display: none;
     width: auto;
     text-align: center;
@@ -220,6 +234,46 @@ a {
     padding: 1.5rem;
     padding-left: 7rem;
     padding-right: 7rem;
+}
+
+.accordion-button {
+    display: flex;
+    justify-content: center;
+    background-color: #2c3034 !important;
+    color: white !important;
+    font-size: 2rem;
+    font-weight: bold;
+    width: 40rem;
+    height: 5rem;
+}
+
+.accordion-button h3 {
+    text-align: center;
+    margin: auto;
+}
+
+.accordion-button::after {
+    content: none;
+}
+
+.accordion-header {
+    background-color: #2c3034;
+}
+
+.accordion-collapse {
+    background-color: #2c3034;
+    color: white;
+}
+.accordion-body table {
+    margin: auto;
+}
+.accordion-body table th {
+    padding-left: 2rem;
+    padding-right: 2rem;
+}
+
+.show {
+    background-color: #2c3034;
 }
 
 
@@ -265,6 +319,9 @@ a {
         padding-left: 2rem;
         padding-right: 2rem;
     }
+    .logo {
+        display: none !important;
+    }
 }
 
 @media (min-width:320px) and (max-width: 500px) {
@@ -283,11 +340,24 @@ a {
     .tabla-goleadores td, .tabla-goleadores th, .tabla-vallas td, .tabla-vallas th  {
         padding: 0.5rem;
     }
+    .logo {
+        display: none !important;
+    }
+
+    .accordion-button {
+        width: 30rem;
+    }
 
 }
 
-@media (min-width:320px) and (max-width: 854px) {
     .menu-torneo {
         margin: auto;
     }
-}
+    .logo {
+        width: 10rem;
+        position: absolute;
+        top: 4px;
+        left: 2px;
+        box-shadow: 1px 1px 7px 7px white;
+    
+    }
